cell error debugging

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -428,6 +428,7 @@
             }
 
             for (lastDayOfMonth; lastDayOfMonth <= 46; lastDayOfMonth++){
+                console.log('able to find: cell' + x);
                 let cell = document.getElementById('cell' + x)
                 cell.style.visibility = 'hidden'
                 x++
