--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -427,6 +427,7 @@
                 x++;
             }
 
+            console.log(lastDayofMonth);
             for (lastDayOfMonth; lastDayOfMonth <= 42; lastDayOfMonth++){
                 let cell = document.getElementById('cell' + x)
                 cell.style.visibility = 'hidden'
