if cell == null break

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -430,6 +430,9 @@
             console.log(lastDayOfMonth);
             for (lastDayOfMonth; lastDayOfMonth <= 42; lastDayOfMonth++){
                 let cell = document.getElementById('cell' + x)
+                if (cell == null){
+                    break;
+                }
                 cell.style.visibility = 'hidden'
                 x++
             }
