--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -154,11 +154,12 @@
         }
 
         .cell-date-day {
-            font-size:larger;
+            text-align: left;
+            font-size:medium;
         }
 
         .cell-training-info {
-            font-size:medium;
+            font-size:larger;
         }
 
     </style>
