--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -143,7 +143,7 @@
         .cells-container {
             display: grid; 
             grid-template-columns: repeat(7, 1fr);
-            text-align: center;
+            /* text-align: center; */
         }
 
         .cells {
@@ -159,6 +159,7 @@
         }
 
         .cell-training-info {
+            text-align: center;
             font-size:larger;
         }
 
