--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -159,6 +159,7 @@
         }
 
         .cell-training-info {
+            align-content: center;
             align-self: center;
             justify-self: center;
             text-align: center;
