--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -162,6 +162,8 @@
             display: flex;
             justify-content: center;
             text-align: center;
+            margin: 0px;
+            padding: 0px;
         }
 
         .cell-training-info {
