--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -446,7 +446,7 @@
             if (this.innerHTML == ''){
                 console.log("no training to view!");
             } else {
-                console.log('data = ' + $('#'+clickedEl.id).data(training));
+                console.log('data = ' + $('#'+clickedEl.id).data());
             }
         }
 
