--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -456,7 +456,7 @@
             } else {
                 var trainingJSON = $('#'+clickedEl.id).data()
                 console.log(Object.values(trainingJSON));
-                console.log(JSON.stringify(Object.values(trainingJSON)));
+                console.log(JSON.stringify(Object.values(trainingJSON)[0]));
 
                 for (var training in Object.values(trainingJSON) ){
                     console.log(JSON.stringify(training));
