--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -457,7 +457,8 @@
                 var trainingJSON = $('#'+clickedEl.id).data()
                 // console.log(Object.values(trainingJSON));
                 // console.log(JSON.stringify(Object.values(trainingJSON)[0]));
-                for (training in Object.values(trainingJSON)){
+                for (item in Object.values(trainingJSON)){
+                    var training = JSON.parse(item)
                     console.log(training['id']);
                     console.log(training[2]);
                 }
