--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -463,12 +463,12 @@
                     console.log(JSON.stringify(trainingJSON[training]));
                     $('.expanded-training-info').append(
                         '<div>' +
-                            '<h3>Training #' + training['id']  + '</h3>' +
-                            '<span>Time: ' + training['time'] + '</span>' +
-                            '<span>Team: ' + training['team'] + '</span>' +
-                            '<span>Location: ' + training['location'] + '</span>' +
-                            '<span>Drills: ' + training['drills'] + '</span>' +
-                            '<span>Attendance: ' + training['attendance'] + '</span>' +
+                            '<h3>Training #' + trainingJSON[training]['id']  + '</h3>' +
+                            '<span>Time: ' + trainingJSON[training]['time'] + '</span>' +
+                            '<span>Team: ' + trainingJSON[training]['team'] + '</span>' +
+                            '<span>Location: ' + trainingJSON[training]['location'] + '</span>' +
+                            '<span>Drills: ' + trainingJSON[training]['drills'] + '</span>' +
+                            '<span>Attendance: ' + trainingJSON[training]['attendance'] + '</span>' +
                         '</div>'
                     )
                 }
