--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -464,11 +464,11 @@
                     $('.expanded-training-info').append(
                         '<div>' +
                             '<h3>Training #' + trainingJSON[training]['id']  + '</h3>' +
-                            '<span>Time: ' + trainingJSON[training]['time'] + '</span>' +
-                            '<span>Team: ' + trainingJSON[training]['team'] + '</span>' +
-                            '<span>Location: ' + trainingJSON[training]['location'] + '</span>' +
-                            '<span>Drills: ' + trainingJSON[training]['drills'] + '</span>' +
-                            '<span>Attendance: ' + trainingJSON[training]['attendance'] + '</span>' +
+                            '<span style="display:block">Time: ' + trainingJSON[training]['time'] + '</span>' +
+                            '<span style="display:block">Team: ' + trainingJSON[training]['team'] + '</span>' +
+                            '<span style="display:block">Location: ' + trainingJSON[training]['location'] + '</span>' +
+                            '<span style="display:block">Drills: ' + trainingJSON[training]['drills'] + '</span>' +
+                            '<span style="display:block">Attendance: ' + trainingJSON[training]['attendance'] + '</span>' +
                         '</div>'
                     )
                 }
