rest HTML on viewtraining

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -458,6 +458,8 @@
             if (this.innerHTML == ''){
                 console.log("no training to view!");
             } else {
+                $('.expanded-training-info').innerHTML('') //resets HTML
+
                 var trainingJSON = $('#'+clickedEl.id).data()
                 for (var training in trainingJSON) {
                     console.log(JSON.stringify(trainingJSON[training]));
