--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -296,7 +296,12 @@
                                 <span class="cell-date-day" id="cell-date-<%=x+1%>" name="cell-date-<%=x+1%>">
                                     Cell<%=x+1%>
                                 </span>
-                                <span class="cell-training-info" id="cell-training-<%=x+1%>" name="cell-training-<%=x+1%>" onclick="viewTraining(this)">
+                                <span 
+                                    class="cell-training-info" 
+                                    id="cell-training-<%=x+1%>" 
+                                    name="cell-training-<%=x+1%>" 
+                                    onclick="viewTraining(this)"
+                                    style="padding:5px; cursor:pointer">
 
                                 </span>
                             </div>
