--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -162,6 +162,9 @@
         .cell-training-info {
             color: azure;
             font-size:larger;
+            font-weight: 400;
+            padding:5px; 
+            cursor:pointer
         }
 
         .expanded-training-info {
@@ -301,7 +304,7 @@
                                     id="cell-training-<%=x+1%>" 
                                     name="cell-training-<%=x+1%>" 
                                     onclick="viewTraining(this)"
-                                    style="padding:5px; cursor:pointer">
+                                    >
 
                                 </span>
                             </div>
